More tweaks for Heroku deploy

--- a/app.json
+++ b/app.json
@@ -14,6 +14,6 @@
         }
     },
     "scripts": {
-        "postdeploy": "bower install; grunt build"
+        "postdeploy": "./node_modules/.bin/bower install; ./node_modules/.bin/grunt build"
     }
 }
