Kraken dust update

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "adaro": "^0.1.9",
     "babel-core": "^5.1.13",
     "bower": "^1.4.1",
-    "dustjs-helpers": "^1.2.0",
-    "dustjs-linkedin": "^2.3.6",
+    "dustjs-helpers": "~1.6.0",
+    "dustjs-linkedin": "~2.6.0",
     "engine-munger": "^0.2.0",
     "express": "^4.3.0",
     "grunt": "^0.4.5",
