--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "underscore": "~1.8.3",
     "ace-builds": "~1.1.9",
     "github-fork-ribbon-css": "~0.1.1",
-    "lz-string": "~1.4.3"
+    "lz-string": "~1.4.3",
+    "bootbox": "~4.4.0"
   }
 }
