--- a/config/config.json
+++ b/config/config.json
@@ -23,20 +23,38 @@
             }
         }
     },
-    
+
 
     "i18n": {
         "contentPath": "path:./locales",
         "fallback": "en-US"
     },
-    
-    
+
+
 
     "middleware": {
-
         "static": {
             "module": {
                 "arguments": [ "path:./.build" ]
+            }
+        }
+
+        ,"session": {
+            "module": {
+                "name": "path:./lib/mongo",
+                "arguments": [
+                    {
+                        "secret": "659cecc2-c44f-408e-bc66-788c514a66db",
+                        "cookie": {
+                            "path": "/",
+                            "httpOnly": true,
+                            "maxAge": null
+                        },
+                        "resave": true,
+                        "saveUninitialized": true,
+                        "store": null
+                    }
+                ]
             }
         }
 
@@ -46,7 +64,7 @@
             }
         }
 
-        
+
         ,"expressView": {
             "priority": 100,
             "enabled": true,
@@ -54,9 +72,9 @@
                 "name": "engine-munger/lib/expressView"
             }
         }
-        
 
-        
+
+
 
         ,"fileNotFound": {
             "enabled": true,
@@ -76,6 +94,6 @@
             }
         }
 
-        
+
     }
 }
