--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "adaro": "^0.1.9",
     "babel-core": "^5.1.13",
     "bower": "^1.4.1",
+    "connect-mongo": "^0.8.1",
     "dustjs-helpers": "~1.6.0",
     "dustjs-linkedin": "~2.6.0",
     "engine-munger": "^0.2.0",
     "express": "^4.3.0",
+    "express-session": "^1.11.2",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
     "grunt-cli": "^0.1.13",
@@ -30,7 +32,9 @@
     "kraken-devtools-browserify": "0.0.3",
     "kraken-js": "^1.0.1",
     "less": "^1.7.5",
-    "localizr": "^0.1.6"
+    "localizr": "^0.1.6",
+    "mongoose": "^4.0.5",
+    "yggdrasil": "0.0.4"
   },
   "devDependencies": {
     "mocha": "^1.18.0",
