--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less": "^1.7.5",
     "localizr": "^0.1.6",
     "mongoose": "^4.0.5",
+    "socket.io": "^1.3.5",
     "yggdrasil": "0.0.4"
   },
   "devDependencies": {
