--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "engine-munger": "^0.2.0",
     "express": "^4.3.0",
     "express-session": "^1.11.2",
+    "express-sslify": "^1.2.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
     "grunt-cli": "^0.1.13",
