--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "localizr": "^0.1.6",
     "mongoose": "^4.0.5",
     "socket.io": "^1.3.5",
+    "superagent": "^3.5.2",
     "yggdrasil": "0.0.4"
   },
   "devDependencies": {
