--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "build/index.js",
     "start-dev": "nodemon -r babel-register src/index.js",
-    "build": "yarn build:client && yarn build:server",
-    "postinstall": "yarn build",
+    "build": "npm run build:client && npm run build:server",
+    "postinstall": "npm run build",
     "build:client": "webpack --env.production --config config/webpack.config.js",
     "build:visualize": "cross-env WEBPACK_VISUALIZE=true webpack --env.production --config config/webpack.config.js",
     "build:server": "cross-env NODE_ENV=production babel --source-maps inline -Dd build/ src/",
