--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "minimist": "^1.2.0",
     "mongoose": "^4.9.8",
     "prop-types": "^15.5.8",
+    "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-ace": "^4.2.1",
     "react-addons-css-transition-group": "^15.4.2",
@@ -44,6 +45,7 @@
     "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.68.3",
+    "socket.io": "^2.0.1",
     "source-map-support": "^0.4.15",
     "winston": "^2.3.1"
   },
