--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router": "^4.1.1",
     "react-router-config": "^1.0.0-beta.1",
     "react-router-dom": "^4.1.1",
+    "react-youtube": "^7.4.0",
     "redux": "^3.6.0",
     "redux-promise-middleware": "^4.2.0",
     "semantic-ui-css": "^2.2.9",
