--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gasbuddy/starter-kit-web",
-  "version": "2.0.0",
-  "description": "A shell project for a GasBuddy web application",
+  "name": "advent.js",
+  "version": "2.1.0",
+  "description": "A collaborative code editing platform",
   "private": true,
   "scripts": {
     "start": "node build/index.js",
